# Spaceship

./: CMakeLists.txt  main.c++  main_menu backup.c++  main_menu backup.h
assets/music/: musics.txt
assets/textures/: textures.txt
include/Spaceship/: bg.hpp  button.hpp  explosion.hpp  game.hpp  loader.hpp  main_menu.hpp  obstacle.hpp  xwing.hpp
src/: bg.c++  button.c++  explosion.c++  game.c++  loader.c++  main_menu.c++  obstacle.c++  xwing.c++
